# little-engine

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.hpp  compile_shader.bat  main.cpp  vcpkg-configuration.json  vl_device.cpp  vl_device.hpp  vl_pipeline.cpp  vl_pipeline.hpp  vl_window.cpp  vl_window.hpp
shaders/: easy_shader.frag
